service.yaml
apiVersion: v1
kind: Service
metadata:
  name: play
spec:
  ports:
  - port: 80
  selector:
    app: play
